# robo_orchard_schemas

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.jinja
schemas/proto/robo_orchard_schemas/action_msgs/: instruction.proto  task.proto
schemas/proto/robo_orchard_schemas/dataset_msgs/: Droid.proto
schemas/proto/robo_orchard_schemas/geometry_msgs/: TransformInFrame.proto
schemas/proto/robo_orchard_schemas/robot_msgs/: urdf.proto
schemas/proto/robo_orchard_schemas/sensor_msgs/: JointState.proto
schemas/proto/robo_orchard_schemas/std_msgs/: Array.proto
tests/: .coveragerc
tests/python/test_robo_orchard_schemas/: test_action_msgs.py  test_dataset_msgs.py  test_geometry_msgs.py  test_robot_msgs.py  test_sensor_msgs.py  test_std_msgs.py
